version 1.0 -- UNRELEASED
    handler changes
	mysql:
	 . Use --skip-events when backing up the performance_schema database.
	   (Closes: #673572)
    backupninja changes
	 . Make it clear what lockfile could not be acquired, if any.

version 1.0-rc1 -- May 15, 2012
    handler changes
	dup:
	 . Make the .dup generated by ninjahelper more consistent with
	   example.dup.
	 . Add support for RackSpace's CloudFiles.
	   Thanks to Yuval Kogman <nothingmuch@woobling.org> for the patch.
	 . Adapt for new duplicity SSH backend.
	   Support bandwidthlimit with new duplicity, using trickle.
	   (Closes: #657201)
	 . Report failure output at error loglevel so that it is emailed
	   (Closes: #536858)
	maildir:
	 . Remove 'loadlimit' parameter - it is not used anywhere.
	mysql:
	 . Don't attempt to dump performance_schema database (Redmine#3741).
	pgsql:
	 . Don't produce empty uncompressed backups (Redmine#3820).
	rdiff-backup:
	 . Use fatal function to report failure of rdiff-backup jobs as such.
	rysnc:
	 . Fix numericids option (Redmine#3691).
	 . Mangle $rsync_options just afterwards (Redmine#3702, Redmine#3001).
	 . Fix metadata rotation.
	 . Allow disabling rotation or setting 2 days as minimum for backup
	   increments in rsync short format (Redmine#2107).
	 . Abort on rsync error (Redmine#3692).
	 . Cleanup orphaned metadata (Redmine#3727).
	 . Use the backup start time and not the time the backup was finished.
	   (Closes: #654192).
	 . Use 'debug', 'fatal' and 'warning' functions instead of regular echo
	   and exit (Redmine#3840, Redmine#3721).
	 . Quoting $starttime (Redmine#3868).
	 . Validate created date on long_rotation to avoid too many arguments
	   at comparison (Redmine#3868).
	 . Quoting $exclude and $excludes and avoiding a for loop on $exclude
	   to not expand wildcards in beforehand (Redmine#3882).
	 . Quote excludes (Redmine#3882).
	 . Changing remaining 'exit' to 'fatal' at rsync handler (Redmine#3721).